======================
    FIXED: mountman does not stop dirwatch after close + memory leak
    FIXED: compare fix at directories with escape characters
    FIXED: Sorry - Archive test passed
    FIXED: FTP proxy bug (more than one @ characters in the URL)
    REMOVED: SortByExtention menu item (which did nothing)
    UPDATED: Dutch translation

1.29-beta
======================
    ADDED: KrSearch Match whole word only feature
    ADDED: Tab-browsing shortens tabs when more tabs are created
    ADDED: Starting Krusader with root privileges by pressing Alt+K
    ADDED: Open-in-a-new-tab available in right-click menu
    ADDED: Creating new files with SHIFT+F4
    ADDED: Russian translation (thanks to Dmitry Chernyak)
    ADDED: Ctrl+Enter and Ctrl+Shift+Enter keyboard shortcuts
    ADDED: default shortcut for refreshing the panel is Ctrl+R
    ADDED: ctrl-left/right arrow checks if we're on a folder, if so it refreshes the other panel with the contents
           of the folder, otherwise to the same path as current one (Wincmd style)
    ADDED: tabbed-browsing beta
    ADDED: SHIFT-F3 view dialog.
    ADDED: The internal viewer follow links on HTML pages.
    ADDED: panel swapping by Ctrl+U
    ADDED: command line improvments: ctrl+/ opens history list, up&down keys work again, and general usability
    ADDED: krusader can now be started from commandline with new options:
           try: krusader --left=/mnt/cdrom --right=ftp://downloads@myserver.net !
    ADDED: new command line widget. should fix some issues and requests
    ADDED: Missing WhatsThis information (thanks to Mikolaj!)
    ADDED: a new shortcut for 'show hidden files' - ctrl+. (ctrl plus dot)
    ADDED: rar support to krArc KIO slave.
    ADDED: open with in the right click menu for multiple files with the same mimetype.
    ADDED: Patch by Heiner <h.eichmann_at_gmx.de>  which adds a cancel button to the calculate space action.
    FIXED: KrSearch does not find texts at the last row