@@ -1,4 +1,5 @@
 ======================
+    FIXED: mountman does not watch readonly directories (mount can change its permissions!)
     FIXED: mountman does not stop dirwatch after close + memory leak
     FIXED: compare fix at directories with escape characters
     FIXED: Sorry - Archive test passed
